<?xml version="1.0" encoding="utf-8"?>
<layout>

  <data>
    <variable
      name="controller"
      type="de.eichstaedt.todos.domain.usecases.LoginActivity"></variable>
  </data>

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/loginEmail"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/emailTextInput"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="textEmailAddress"
      android:hint="E-Mail"
      layout_width="match_parent"
      layout_height="wrap_content"
      android:text="@={controller.email}" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/loginPassword"
    app:layout_constraintTop_toBottomOf="@+id/loginEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/passwordTextInput"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:inputType="textPassword"
      android:maxLength="6"
      android:maxLines="1"
      android:hint="Passwort"
      layout_width="match_parent"
      layout_height="wrap_content"
      android:text="@={controller.passwort}" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/loginErrorText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/loginPassword"
    android:text=""
    android:textColor="@color/todoUrgent"
    android:textSize="30dp" />

  <com.google.android.material.progressindicator.LinearProgressIndicator
    android:id="@+id/loginProgress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:indeterminate="true"
    app:layout_constraintTop_toBottomOf="@+id/loginErrorText"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/LoginButton"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:text="Anmelden"
    android:layout_marginTop="16dp"
    android:enabled="@{controller.loginActive()}"
    android:onClick="@{(v) -> controller.login()}"
    app:layout_constraintTop_toBottomOf="@+id/loginProgress"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>